--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -62,9 +62,9 @@
 
 - name: 'update /etc/hosts with internal IP'
   lineinfile:
-    line: '{{local_ipv4}} {{inventory_hostname}}'
+    line: '{{local_ipv4}} {{inventory_hostname}}.node.consul {{inventory_hostname}}'
     path: /etc/hosts
-    regexp: '\d+\.\d+\.\d+\.\d+ {{inventory_hostname}}'
+    regexp: '\d+\.\d+\.\d+\.\d+ .*{{inventory_hostname}}'
     state: present
   become: true
   tags: ct-kafka
